--- a/OnlineRegistration/OnlineRegistration/Views/Shared/_Layout.cshtml
+++ b/OnlineRegistration/OnlineRegistration/Views/Shared/_Layout.cshtml
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title – приложение ASP.NET</title>
@@ -11,7 +11,7 @@
 </head>
 <body style="background-image:url(../../Images/bg2.jpg)">
 
-    <div class="navbar navbar-inverse navbar-fixed-top" style="background-image: url(../../Images/6.jpg)">
+    <div class="navbar navbar-inverse navbar-fixed-top" style="background-image: url(../../Content/Images/depositphotos_27155023-stock-illustration-css-and-html-code.jpg)">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -19,7 +19,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Имя приложения", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("IT Academy", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav"></ul>
