--- a/OnlineRegistration/OnlineRegistration/Content/styles.css
+++ b/OnlineRegistration/OnlineRegistration/Content/styles.css
@@ -22,3 +22,25 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.carousel-parent {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.carousel-image{
+    width:1000px;
+    height:400px !important;
+}
+
+.carousel-text {
+    display: inline-block;
+    float: right;
+    color: black;
+    text-align:left;
+    font-size: larger;
+    margin: 0 48px;
+}
