--- a/OnlineRegistration/OnlineRegistration/Views/Home/Index.cshtml
+++ b/OnlineRegistration/OnlineRegistration/Views/Home/Index.cshtml
@@ -15,7 +15,8 @@
 
 
 <div class="container">
-    <img src="~/Images/0.jpg" alt="" style="width:8%;">
+
+    <h3 class="margin" style="font-weight: bold">Получи профессию будущего уже сегодня!</h3><br>
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
@@ -32,61 +33,125 @@
         <div class="carousel-inner">
 
             <div class="item active">
-                <img src="c#.jpg" alt=" " style="width:40%; opacity:0.8;">
+                <div class="carousel-parent">
+                    <img src="~/Content/Images/c-sharp.jpg" alt=" " class="carousel-image" />
+                    <span class="carousel-text">
+                        <p>Получи за 9 месяцев профессию разработчика!</p>
+                        <h3 style="border-top-color:mediumblue"></h3>
+                        <p>Стоимость курса: 70 000 сомов</p>
+                        <p>Дата начала:  01.01.2020</p>
+                        <p>Ментор: Бекжан Жума</p>
+                    </span>
+                </div>
                 <div class="carousel-caption">
-                    <h3 style="color:lawngreen; font-size:40px">OnlineRegistration</h3>
-                    <p style="color:lawngreen; text-align:right; font-size:larger">Зарегистрируйся не выходя из дому</p>
+                    <h3 style="color:darkblue; font-size:40px; text-align:right"></h3>
+                </div>
+            </div>
+
+
+            <div class="item">
+                <div class="carousel-parent">
+                    <img src="~/Content/Images/frontend2.jpg" alt=" " class="carousel-image" />
+                    <span class="carousel-text">
+                        <p> Получи за 9 месяцев профессию разработчика!</p>
+                        <p> Стоимость курса: 70 000 сомов</p>
+                        <p> Дата начала:  15.02.2020</p>
+                        <p> Ментор: Александр Щевчук</p>
+                    </span>
+                </div>
+                <div class="carousel-caption">
+                    <h3 style="color:darkblue; font-size:40px; text-align:right"></h3>
                 </div>
             </div>
 
             <div class="item">
-                <img src="~/Images/Mt.jpg" alt=" " style="width:40%; opacity:0.8;">
+                <div class="carousel-parent">
+                    <img src="~/Content/Images/depositphotos_319759258-stock-photo-java-text-with-blueprint.jpg"  alt=" " class="carousel-image" />
+                    <span class="carousel-text">
+                        <p>Получи за 9 месяцев профессию разработчика!</p>
+                        <p> Стоимость курса: 70 000 сомов</p>
+                        <p> Дата начала:  01.05.2020</p>
+                        <p>Ментор: Алишер Касымов</p>
+                    </span>
+                </div>
                 <div class="carousel-caption">
-                    <h3 style="color:lawngreen; font-size:40px; text-align:right">MoneyTree - Электронный кошелек на всю страну</h3>
-                    <p style="color:lawngreen; text-align:right; font-size:larger">Пополняйте и используйте баланс 24/7 в самых отдаленных уголках Кыргызстана</p>
+                    <h3 style="color:darkblue; font-size:40px; text-align:right"></h3>
+                </div>
+            </div>
+
+
+            <div class="item">
+                <div class="carousel-parent">
+                    <img src="~/Content/Images/MobileApp.jpg"  alt=" " class="carousel-image" />
+                    <span class="carousel-text">
+                        <p>Получи за 9 месяцев профессию разработчика!</p>
+                        <p>Java/MobileApp</p>
+                        <p> Стоимость курса: 70 000 сомов</p>
+                        <p> Дата начала:  01.03.2020</p>
+                        <p> Ментор: Чынгыз Исаков</p>
+                    </span>
+                </div>
+                <div class="carousel-caption">
+                    <h3 style="color:darkblue; font-size:40px; text-align:right"></h3>
                 </div>
             </div>
 
             <div class="item">
-                <img src="~/Images/mt1.jpg" alt=" " style="width:40%; opacity:0.8;">
+                <div class="carousel-parent">
+                    <img src="~/Content/Images/depositphotos_320069624-stock-photo-php-text-with-bolts-wrench.jpg"  alt=" " class="carousel-image" />
+                    <span class="carousel-text">
+                        <p>Получи за 9 месяцев профессию разработчика!</p>
+                        <p> Стоимость курса: 70 000 сомов</p>
+                        <p>Дата начала:  01.04.2020</p>
+                        <p>Ментор: Анастасия Бондаренко</p>
+                    </span>
+                </div>
                 <div class="carousel-caption">
-                    <h3 style="color:lawngreen; font-size:40px">MoneyTree - это больше чем Деньги...</h3>
-                    <p style="color:lawngreen; text-align:right; font-size:larger">Оплачивайте за коммунальные услуги, интернет, штрафы, налоги, сотовую связь и получайте бонусы</p>
+                    <h3 style="color:darkblue; font-size:40px; text-align:right"></h3>
                 </div>
             </div>
 
+            <div class="item">
+                <div class="carousel-parent">
+                    <img src="~/Content/Images/depositphotos_105514290-stock-photo-python-cubics-word.jpg" alt=" " class="carousel-image" />
+                    <span class="carousel-text">
+                        <p>Получи за 9 месяцев профессию разработчика!</p>
+                        <p> Стоимость курса: 70 000 сомов</p>
+                        <p> Дата начала:  01.03.2020</p>
+                        <p>Ментор: Чынгыз Исаков</p>
+                    </span>
+                </div>
+                <div class="carousel-caption">
+                    <h3 style="color:darkblue; font-size:40px; text-align:right"></h3>
+                </div>
+            </div>
+
+            <div class="item">
+                <div class="carousel-parent">
+                    <img src="~/Content/Images/scratch2.jpg" alt=" " class="carousel-image" />
+                    <span class="carousel-text">
+                        <p> Получи за 9 месяцев профессию разработчика!</p>
+                        <p>Стоимость курса: 70 000 сомов</p>
+                        <p> Дата начала:  01.06.2020</p>
+                        <p> Ментор: Джон Элин</p>
+                    </span>
+                </div>
+                <div class="carousel-caption">
+                    <h3 style="color:darkblue; font-size:40px; text-align:right"></h3>
+                </div>
+            </div>
+
+
+            <!-- Left and right controls -->
+            <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right"></span>
+                <span class="sr-only">Next</span>
+            </a>
         </div>
+    </div>
 
-        <!-- Left and right controls -->
-        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#myCarousel" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-            <span class="sr-only">Next</span>
-        </a>
-    </div>
-</div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
