--- a/OnlineRegistration/OnlineRegistration/Views/Home/Index.cshtml
+++ b/OnlineRegistration/OnlineRegistration/Views/Home/Index.cshtml
@@ -38,6 +38,7 @@
                     <span class="carousel-text">
                         <p>Получи за 9 месяцев профессию разработчика!</p>
                         <h3 style="border-top-color:mediumblue"></h3>
+                        <h> C# </h>
                         <p>Стоимость курса: 70 000 сомов</p>
                         <p>Дата начала:  01.01.2020</p>
                         <p>Ментор: Бекжан Жума</p>
@@ -51,9 +52,10 @@
 
             <div class="item">
                 <div class="carousel-parent">
-                    <img src="~/Content/Images/frontend2.jpg" alt=" " class="carousel-image" />
+                    <img src="~/Content/Images/frontEnd.jpg"  alt=" " class="carousel-image" />
                     <span class="carousel-text">
                         <p> Получи за 9 месяцев профессию разработчика!</p>
+                        <h> Front-end</h>
                         <p> Стоимость курса: 70 000 сомов</p>
                         <p> Дата начала:  15.02.2020</p>
                         <p> Ментор: Александр Щевчук</p>
@@ -66,9 +68,10 @@
 
             <div class="item">
                 <div class="carousel-parent">
-                    <img src="~/Content/Images/depositphotos_319759258-stock-photo-java-text-with-blueprint.jpg"  alt=" " class="carousel-image" />
+                    <img src="~/Content/Images/Java.jpg"   alt=" " class="carousel-image" />
                     <span class="carousel-text">
                         <p>Получи за 9 месяцев профессию разработчика!</p>
+                        <h>  Java </h>
                         <p> Стоимость курса: 70 000 сомов</p>
                         <p> Дата начала:  01.05.2020</p>
                         <p>Ментор: Алишер Касымов</p>
@@ -85,7 +88,7 @@
                     <img src="~/Content/Images/MobileApp.jpg"  alt=" " class="carousel-image" />
                     <span class="carousel-text">
                         <p>Получи за 9 месяцев профессию разработчика!</p>
-                        <p>Java/MobileApp</p>
+                        <h>Java /MobileApp</h>
                         <p> Стоимость курса: 70 000 сомов</p>
                         <p> Дата начала:  01.03.2020</p>
                         <p> Ментор: Чынгыз Исаков</p>
@@ -98,9 +101,10 @@
 
             <div class="item">
                 <div class="carousel-parent">
-                    <img src="~/Content/Images/depositphotos_320069624-stock-photo-php-text-with-bolts-wrench.jpg"  alt=" " class="carousel-image" />
+                    <img src="~/Content/Images/PHP.jpg"   alt=" " class="carousel-image" />
                     <span class="carousel-text">
                         <p>Получи за 9 месяцев профессию разработчика!</p>
+                        <h> PHP </h>
                         <p> Стоимость курса: 70 000 сомов</p>
                         <p>Дата начала:  01.04.2020</p>
                         <p>Ментор: Анастасия Бондаренко</p>
@@ -113,9 +117,10 @@
 
             <div class="item">
                 <div class="carousel-parent">
-                    <img src="~/Content/Images/depositphotos_105514290-stock-photo-python-cubics-word.jpg" alt=" " class="carousel-image" />
+                    <img src="~/Content/Images/840px-Ai-machine-learning-python-1024x367.jpg"  alt=" " class="carousel-image" />
                     <span class="carousel-text">
                         <p>Получи за 9 месяцев профессию разработчика!</p>
+                        <h> Python </h>
                         <p> Стоимость курса: 70 000 сомов</p>
                         <p> Дата начала:  01.03.2020</p>
                         <p>Ментор: Чынгыз Исаков</p>
@@ -131,6 +136,7 @@
                     <img src="~/Content/Images/scratch2.jpg" alt=" " class="carousel-image" />
                     <span class="carousel-text">
                         <p> Получи за 9 месяцев профессию разработчика!</p>
+                        <h> Scratch </h>
                         <p>Стоимость курса: 70 000 сомов</p>
                         <p> Дата начала:  01.06.2020</p>
                         <p> Ментор: Джон Элин</p>
