--- a/OnlineRegistration/OnlineRegistration/Views/Shared/_LayoutAdmin.cshtml
+++ b/OnlineRegistration/OnlineRegistration/Views/Shared/_LayoutAdmin.cshtml
@@ -24,7 +24,7 @@
                 <ul class="nav navbar-nav">
              
                     <li>@Html.ActionLink("Перечень курсов", "Index", "Courses")</li>
-                    <li>@Html.ActionLink("Клиенты", "Index", "UserCourses")</li>
+                    <li>@Html.ActionLink("Студенты", "Index", "UserCourses")</li>
                     
                 </ul>
                 @Html.Partial("_LoginPartial")
