--- a/OnlineRegistration/OnlineRegistration/Views/UserCourses/Delete.cshtml
+++ b/OnlineRegistration/OnlineRegistration/Views/UserCourses/Delete.cshtml
@@ -8,7 +8,7 @@
 \
 <h2>Аннулирование данных</h2>
 
-<h3>Вы уверены, что хотите удалить данного клиента?</h3>
+<h3>Вы уверены, что хотите удалить данного студента?</h3>
 <div>
     <h4>Клиент</h4>
     <hr />
