--- a/OnlineRegistration/OnlineRegistration/Views/UserCourses/Index.cshtml
+++ b/OnlineRegistration/OnlineRegistration/Views/UserCourses/Index.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Клиенты</h2>
+<h2>Студенты</h2>
 
 <p>
-    @Html.ActionLink("Добавить нового клиента", "Create")
+    @Html.ActionLink("Добавить нового студента", "Create")
 </p>
 <table class="table">
     <tr>
