--- a/OnlineRegistration/OnlineRegistration/Views/UserCourses/Create.cshtml
+++ b/OnlineRegistration/OnlineRegistration/Views/UserCourses/Create.cshtml
@@ -1,11 +1,11 @@
 ﻿@model OnlineRegistration.Models.UserCourse
 
 @{
-    ViewBag.Title = "Добавление клиента/курса";
+    ViewBag.Title = "Добавление студента/курса";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Добавить нового клиента/курса</h2>
+<h2>Добавить нового студента/курса</h2>
 
 
 @using (Html.BeginForm()) 
